--- a/candy/src/assets/scss/_variables.scss
+++ b/candy/src/assets/scss/_variables.scss
@@ -133,7 +133,22 @@ $spacers: map-merge(
     2: ($spacer * .5),
     3: $spacer,
     4: ($spacer * 1.5),
-    5: ($spacer * 3)
+    5: ($spacer * 3),
+    6: ($spacer * 3.5),
+    7: ($spacer * 4),
+    8: ($spacer * 5),
+    9: ($spacer * 5.5),
+    10: ($spacer * 6),
+    11: ($spacer * 6.5),
+    12: ($spacer * 7),
+    13: ($spacer * 8),
+    14: ($spacer * 8.5),
+    15: ($spacer * 9),
+    16: ($spacer * 9.5),
+    17: ($spacer * 10),
+    18: ($spacer * 11),
+    19: ($spacer * 11.5),
+    20: ($spacer * 12)
   ),
   $spacers
 );
