--- a/candy/src/assets/scss/new.scss
+++ b/candy/src/assets/scss/new.scss
@@ -1,3 +1,39 @@
+/*input 黃色底消除*/
+input:-webkit-autofill, 
+textarea:-webkit-autofill, 
+select:-webkit-autofill {
+    box-shadow : 0 0 0px 1000px #d8e7fd inset !important;
+}
+input[type=text]:focus, input[type=email]:focus,input[type=password]:focus, textarea:focus {
+      box-shadow : 0 0 0 1000px #d8e7fd inset !important; 
+}
+a:hover {
+  color: #fa7268;
+  text-decoration: none;
+}
+/**/
+.borer-dashed-normal{
+  border-bottom:1px dashed ;
+  border-color: $orange;
+}
+/**/
+.mw-center{
+  margin:auto auto auto auto;
+  width:100%
+}
+/*.table thead th {
+  vertical-align: bottom;
+  border-bottom: 0px solid transparent;
+}*/
+.table td, .table th {
+  padding: .45rem;
+  vertical-align: top;
+  border-top: 0px solid transparent;
+  border-bottom: 1.5px dashed #eee; //double,dotted,dashed;
+}
+.fs-40{
+  font-size: 40px;
+}
 ul {
     list-style-type: none;
   }
@@ -13,7 +49,7 @@ li {
 }
 .lang-icon{
   font-size:25px; 
-  color:#ff6761;
+  color:$orange;
 }
 .lang-dropdown {
   position: relative;
@@ -23,7 +59,7 @@ li {
 .lang-dropdown-content {
   display: none;
   position: absolute;
-  background-color: #ff6761;
+  background-color: $orange;
   min-width: 100px;
   margin: 0px 0px 0px -50px;
   padding:10px 5px;
@@ -57,5 +93,251 @@ li {
     -ms-flex: 0 0 85%;
     flex: 0 0 85%;
     max-width: 85%;
+  }
+}
+/**/
+/*checkbox*/
+.form-radio,.form-checkbox
+{
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  display: inline-block;
+  position: relative;
+  background-color: #f1f1f1;
+  color: #666;
+  top: 7px;
+  height: 20px;
+  width: 20px;
+  border: 0;
+  border-radius: 50px;
+  cursor: pointer;     
+  margin-right: 7px;
+  outline: none;
+}
+.form-radio:checked::before, .form-checkbox:checked::before
+{
+  position: absolute;
+  left: 11px;
+  top: 0px;
+  margin-top: -5px;
+  content: '';
+  width: 10px;        
+  height: 20px;          
+  border-bottom: 3px solid #4dc033;
+  border-right: 3px solid #4dc033;
+  transform: rotate(45deg);    
+}
+.form-radio:hover, .form-checkbox:hover
+{
+  background-color: #f7f7f7;
+}
+.form-radio:checked, .form-checkbox:checked{
+     background-color: #f1f1f1;
+}
+/*Pagination*/
+.page-link {
+  position: relative;
+  display: block;
+  padding: 0.23rem 0.58rem;
+  margin-left: -1px;
+  line-height: 1.25;
+  color: #333;
+  background-color: #fff;
+  border: 1px solid $orange;
+  border-radius: 50%;
+}
+.page-item:last-child .page-link {
+  border-top-right-radius: 50%;
+  border-bottom-right-radius: 50%;
+}
+.page-item:first-child .page-link {
+  margin-left: 0;
+  border-top-left-radius: 50%;
+  border-bottom-left-radius: 50%;
+}
+.page-item.disabled .page-link {
+  color: #6c757d;
+  pointer-events: none;
+  cursor: auto;
+  background-color: #fff;
+  border-color: #dee2e6;
+  border-radius: 50%;
+}
+.pagination li {display: block;
+  font-size: 16px;
+  margin: auto 5px;
+}  
+.page-link:focus {
+  z-index: 2;
+  outline: 0;
+  box-shadow: 0 0 0 0.2rem rgba(0,123,255,.25);
+}
+.page-link:hover {
+  z-index: 2;
+  color: $dark;
+  text-decoration: none;
+  background-color: #e9ecef;
+  border-color: #dee2e6;
+}
+.card {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  min-width: 0;
+  word-wrap: break-word;
+  background-color: #fff;
+  background-clip: border-box;
+  border: 0px solid #fff;
+  border-radius: 0.25rem;
+}
+.shadow-sm {
+  -webkit-box-shadow: 0 0.125rem 0.25rem transparent !important;
+  box-shadow: 0 0.125rem 0.25rem transparent !important;
+}
+.card-footer {
+  padding: 0.75rem 1.25rem;
+  background-color: transparent;
+  border-top: 1px solid transparent;
+}
+.cart-img{
+  height: 220px; 
+  background-size: cover; 
+  background-position: center
+}
+/*cart-img*/
+.overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 220px;
+  width: 100%;
+  opacity: 0;
+  transition: .3s ease;
+  background-color:rgba(255, 255, 255, .45);
+}
+.cart-img:hover .overlay {
+  opacity: 1;
+}
+.icon {
+  color: #FA7268 ;
+  font-size: 50px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  text-align: center;
+}
+.icon:hover {
+  color: red;
+}
+.alert-light {
+  color: #818182;
+  font-size:19px;
+  background-color: #fefefe;
+  border-color: #818182;
+  border-radius:10px;
+}
+.alert-basic {
+  color: #333;
+  font-size:19px;
+  font-weight: bold;
+  background-color: $orange;
+  border-color: $orange;
+  border-radius:10px;
+}
+.progress-icon{ 
+  background:#FA7268;
+  border-radius: 50%;
+  color:#fff;
+  font-size: 17px;
+  font-weight: bold;
+  padding:9px 15px;
+  margin:auto auto auto auto;
+  width: 45px; 
+}
+
+.progress-icon-2{   
+  background:#fff;
+  border:1px solid #FA7268;
+  border-radius: 50%;
+  color:#333;
+  padding:5px 10px;
+  margin:auto auto auto auto;
+  width: 30px;
+}
+.progress-line{
+  height:5px;
+  width:67%;
+  background:#ddd;
+  margin-left:168px;
+  margin-top:-42px;
+}
+.progress-suscessline{
+  height:5px;
+  width:67%;
+  background:#FA7268;
+  margin-left:168px;
+  margin-top:-42px;
+}
+.progress-basicline{
+  height:5px;
+  width:33%;
+  background:#FA7268;
+  margin-left:168px;
+  margin-top:-5px;
+}
+@media (max-width:991px){
+  .progress-line{
+    width:65%;
+    margin-left:135px;
+  }
+  .progress-suscessline{
+    width:65%;
+    margin-left:135px;
+  }
+  .progress-basicline{
+    width:28%;
+    margin-left:135px;
+  }
+}
+@media (max-width:767px){
+  .progress-line{
+    width:65%;
+    margin-left:105px;
+  }
+  .progress-suscessline{
+    width:65%;
+    margin-left:105px;
+  }
+  .progress-basicline{
+    width:28%;
+    margin-left:105px;
+  }
+  .table {
+    width: 80%;
+  }
+  .input-group{
+    width: 80%;
+  }
+}
+@media (max-width:480px){
+  .progress-suscessline{
+    width:65%;
+    margin-left:70px;
+  }
+}
+@media (max-width:360px){
+  .lang-icon {
+    font-size: 21px;
+
   }
 }
